test/errors/E018.m3
MODULE E018;



VAR a := VAL(1,FLOAT); <*ERROR 018*>

BEGIN

END E018.
